# book-scanner

./: BOOK_SCANNER_README.md  CLEANUP_SUMMARY.md  PROJECT_SPECIFICATION.md  PROJECT_SPECIFICATION_COMPACT.md  QUICK_START.md  README.md
backend/: LLM_RECOMMENDATIONS.md  OCR_IMPROVEMENTS.md  pyproject.toml
backend/app/: main.py  models.py
backend/app/alembic/versions/: add_books_and_library_tables.py  b2c3d4e5f6g7_fix_added_date_and_add_unique_constraint.py
backend/app/api/: main.py
backend/app/api/routes/: books.py
backend/app/core/: config.py
backend/app/services/: __init__.py  google_books_service.py  ocr_service.py  recommendation_service.py  vision_service.py
backend/app/services/llm/: __init__.py  base.py  factory.py
backend/app/services/llm/providers/: anthropic.py  google.py  openai.py
backend/tests/: conftest.py
frontend/: FRONTEND_TODO.md  package-lock.json  package.json
frontend/src/: routeTree.gen.ts
frontend/src/client/: BooksService.ts  index.ts  types.gen.ts
frontend/src/components/Books/: BookCover.tsx  MatchBadge.tsx
frontend/src/components/Common/: EmptyState.tsx  LoadingSpinner.tsx  SidebarItems.tsx
frontend/src/components/Scanner/: DetectedBooksList.tsx  ImageUpload.tsx  ScanResults.tsx  TopPicks.tsx
frontend/src/hooks/: useGoogleBooks.ts  useLibrary.ts  useScan.ts
frontend/src/routes/: onboarding.tsx
frontend/src/routes/_layout/: index.tsx  library.tsx  scan.tsx
